updating broken image refs

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -6395,319 +6395,319 @@ input[type="file"] {
 }
 
 .figure-home-1 {
-    background-image: url("/assets/home/1.jpg");
+    background-image: url("/assets/images/home/1.jpg");
 }
 
 .figure-home-2 {
-    background-image: url("/assets/home/2.jpg");
+    background-image: url("/assets/images/home/2.jpg");
 }
 
 .figure-home-3 {
-    background-image: url("/assets/home/3.jpg");
+    background-image: url("/assets/images/home/3.jpg");
 }
 
 .figure-home-4 {
-    background-image: url("/assets/home/4.jpg");
+    background-image: url("/assets/images/home/4.jpg");
 }
 
 .figure-home-5 {
-    background-image: url("/assets/home/5.jpg");
+    background-image: url("/assets/images/home/5.jpg");
 }
 
 .figure-home-6 {
-    background-image: url("/assets/home/6.jpg");
+    background-image: url("/assets/images/home/6.jpg");
 }
 
 .figure-home-leads {
-    background-image: url("/assets/home/leads.png");
+    background-image: url("/assets/images/home/leads.png");
 }
 
 .figure-home-offers {
-    background-image: url("/assets/home/offers.png");
+    background-image: url("/assets/images/home/offers.png");
 }
 
 .figure-home-scores {
-    background-image: url("/assets/home/scores.png");
+    background-image: url("/assets/images/home/scores.png");
 }
 
 .figure-home-traffic {
-    background-image: url("/assets/home/traffic.png");
+    background-image: url("/assets/images/home/traffic.png");
 }
 
 .figure-about-2 {
-    background-image: url("/assets/about/2.jpg");
+    background-image: url("/assets/images/about/2.jpg");
 }
 
 .figure-about-3 {
-    background-image: url("/assets/about/3.jpg");
+    background-image: url("/assets/images/about/3.jpg");
 }
 
 .figure-about-4 {
-    background-image: url("/assets/about/4.jpg");
+    background-image: url("/assets/images/about/4.jpg");
 }
 
 .figure-about-5 {
-    background-image: url("/assets/about/5.jpg");
+    background-image: url("/assets/images/about/5.jpg");
 }
 
 .figure-about-6 {
-    background-image: url("/assets/about/6.jpg");
+    background-image: url("/assets/images/about/6.jpg");
 }
 
 .figure-about-7 {
-    background-image: url("/assets/about/7.jpg");
+    background-image: url("/assets/images/about/7.jpg");
 }
 
 .figure-about-8 {
-    background-image: url("/assets/about/8.jpg");
+    background-image: url("/assets/images/about/8.jpg");
 }
 
 .figure-about-9 {
-    background-image: url("/assets/about/9.jpg");
+    background-image: url("/assets/images/about/9.jpg");
 }
 
 .figure-about-10 {
-    background-image: url("/assets/about/10.jpg");
+    background-image: url("/assets/images/about/10.jpg");
 }
 
 .figure-tour-1 {
-    background-image: url("/assets/tour/1.jpg");
+    background-image: url("/assets/images/tour/1.jpg");
 }
 
 .figure-tour-2 {
-    background-image: url("/assets/tour/2.jpg");
+    background-image: url("/assets/images/tour/2.jpg");
 }
 
 .figure-tour-3 {
-    background-image: url("/assets/tour/3.jpg");
+    background-image: url("/assets/images/tour/3.jpg");
 }
 
 .figure-tour-4 {
-    background-image: url("/assets/tour/4.jpg");
+    background-image: url("/assets/images/tour/4.jpg");
 }
 
 .figure-tour-5 {
-    background-image: url("/assets/tour/5.jpg");
+    background-image: url("/assets/images/tour/5.jpg");
 }
 
 .figure-tour-6 {
-    background-image: url("/assets/tour/6.jpg");
+    background-image: url("/assets/images/tour/6.jpg");
 }
 
 .figure-tour-7 {
-    background-image: url("/tour/7.jpg");
+    background-image: url("/assets/images/tour/7.jpg");
 }
 
 .figure-tour-8 {
-    background-image: url("/assets/tour/8.jpg");
+    background-image: url("/assets/images/tour/8.jpg");
 }
 
 .figure-tour-9 {
-    background-image: url("/assets/tour/9.jpg");
+    background-image: url("/assets/images/tour/9.jpg");
 }
 
 .figure-tour-10 {
-    background-image: url("/assets/tour/10.jpg");
+    background-image: url("/assets/images/tour/10.jpg");
 }
 
 .figure-tour-11 {
-    background-image: url("/assets/tour/11.jpg");
+    background-image: url("/assets/images/tour/11.jpg");
 }
 
 .figure-tour-12 {
-    background-image: url("/assets/tour/12.jpg");
+    background-image: url("/assets/images/tour/12.jpg");
 }
 
 .figure-screens-college-humor {
-    background-image: url("/assets/screens/college-humor.jpg");
+    background-image: url("/assets/images/screens/college-humor.jpg");
 }
 
 .figure-screens-godvine {
-    background-image: url("/assets/screens/godvine.jpg");
+    background-image: url("/assets/images/screens/godvine.jpg");
 }
 
 .figure-screens-trulia {
-    background-image: url("/assets/screens/trulia.jpg");
+    background-image: url("/assets/images/screens/trulia.jpg");
 }
 
 .figure-screens-cambria {
-    background-image: url("/assets/screens/cambria.jpg");
+    background-image: url("/assets/images/screens/cambria.jpg");
 }
 
 .figure-screens-sideshow {
-    background-image: url("/assets/screens/sideshow.jpg");
+    background-image: url("/assets/images/screens/sideshow.jpg");
 }
 
 .figure-screens-espn {
-    background-image: url("/assets/screens/espn.jpg");
+    background-image: url("/assets/images/screens/espn.jpg");
 }
 
 .figure-screens-grockit {
-    background-image: url("/assets/screens/grockit.jpg");
+    background-image: url("/assets/images/screens/grockit.jpg");
 }
 
 .figure-screens-david-cook {
-    background-image: url("/assets/screens/david-cook.jpg");
+    background-image: url("/assets/images/screens/david-cook.jpg");
 }
 
 .figure-traffic-1 {
-    background-image: url("/assets/traffic/1.jpg");
+    background-image: url("/assets/images/traffic/1.jpg");
 }
 
 .figure-traffic-2 {
-    background-image: url("/assets/screens/trulia.jpg");
+    background-image: url("/assets/images/screens/trulia.jpg");
 }
 
 .figure-traffic-3 {
-    background-image: url("/assets/traffic/3.jpg");
+    background-image: url("/assets/images/traffic/3.jpg");
 }
 
 .figure-traffic-4 {
-    background-image: url("/assets/traffic/4.jpg");
+    background-image: url("/assets/images/traffic/4.jpg");
 }
 
 .figure-traffic-10 {
-    background-image: url("/assets/traffic/10.jpg");
+    background-image: url("/assets/images/traffic/10.jpg");
 }
 
 .figure-offers-1 {
-    background-image: url("/offers/1.jpg");
+    background-image: url("/assets/images/offers/1.jpg");
 }
 
 .figure-offers-2 {
-    background-image: url("/assets/offers/2.jpg");
+    background-image: url("/assets/images/offers/2.jpg");
 }
 
 .figure-offers-3 {
-    background-image: url("/assets/offers/3.jpg");
+    background-image: url("/assets/images/offers/3.jpg");
 }
 
 .figure-offers-4 {
-    background-image: url("/assets/offers/4.jpg");
+    background-image: url("/assets/images/offers/4.jpg");
 }
 
 .figure-offers-5 {
-    background-image: url("/assets/offers/5.jpg");
+    background-image: url("/assets/images/offers/5.jpg");
 }
 
 .figure-offers-6 {
-    background-image: url("/assets/offers/6.jpg");
+    background-image: url("/assets/images/offers/6.jpg");
 }
 
 .figure-offers-7 {
-    background-image: url("/assets/offers/7.jpg");
+    background-image: url("/assets/images/offers/7.jpg");
 }
 
 .figure-leads-1 {
-    background-image: url("/assets/leads/1.jpg");
+    background-image: url("/assets/images/leads/1.jpg");
 }
 
 .figure-leads-2 {
-    background-image: url("/assets/leads/2.jpg");
+    background-image: url("/assets/images/leads/2.jpg");
 }
 
 .figure-leads-3 {
-    background-image: url("/assets/leads/3.jpg");
+    background-image: url("/assets/images/leads/3.jpg");
 }
 
 .figure-leads-4 {
-    background-image: url("/assets/leads/4.jpg");
+    background-image: url("/assets/images/leads/4.jpg");
 }
 
 .figure-logos-97th {
-    background-image: url("/assets/logos/97th.jpg");
+    background-image: url("/assets/images/logos/97th.jpg");
 }
 
 .figure-logos-alert {
-    background-image: url("/assets/logos/alert.jpg");
+    background-image: url("/assets/images/logos/alert.jpg");
 }
 
 .figure-logos-apartment {
-    background-image: url("/assets/logos/apartment.jpg");
+    background-image: url("/assets/images/logos/apartment.jpg");
 }
 
 .figure-logos-bamboo {
-    background-image: url("/assets/logos/bamboo.jpg");
+    background-image: url("/assets/images/logos/bamboo.jpg");
 }
 
 .figure-logos-coffee {
-    background-image: url("/assets/logos/coffee.jpg");
+    background-image: url("/assets/images/logos/coffee.jpg");
 }
 
 .figure-logos-fit {
-    background-image: url("/assets/logos/fit.jpg");
+    background-image: url("/assets/images/logos/fit.jpg");
 }
 
 .figure-logos-grasshopper {
-    background-image: url("/assets/logos/grasshopper.jpg");
+    background-image: url("/assets/images/logos/grasshopper.jpg");
 }
 
 .figure-logos-ib {
-    background-image: url("/logos/ib.jpg");
+    background-image: url("/assets/images/logos/ib.jpg");
 }
 
 .figure-logos-kettlebell {
-    background-image: url("/assets/logos/kettlebell.jpg");
+    background-image: url("/assets/images/logos/kettlebell.jpg");
 }
 
 .figure-logos-kiss {
-    background-image: url("/assets/logos/kiss.jpg");
+    background-image: url("/assets/images/logos/kiss.jpg");
 }
 
 .figure-logos-ksl {
-    background-image: url("/assets/logos/ksl.jpg");
+    background-image: url("/assets/images/logos/ksl.jpg");
 }
 
 .figure-logos-lime {
-    background-image: url("/logos/lime.jpg");
+    background-image: url("/assets/images/logos/lime.jpg");
 }
 
 .figure-logos-ok {
-    background-image: url("/assets/logos/ok.jpg");
+    background-image: url("/assets/images/logos/ok.jpg");
 }
 
 .figure-logos-strayer {
-    background-image: url("/assets/logos/strayer.jpg");
+    background-image: url("/assets/images/logos/strayer.jpg");
 }
 
 .figure-logos-wedding {
-    background-image: url("/assets/logos/wedding.jpg");
+    background-image: url("/assets/images/logos/wedding.jpg");
 }
 
 .figure-avatars-josh {
-    background-image: url("/assets/avatars/josh.jpg");
+    background-image: url("/assets/images/avatars/josh.jpg");
 }
 
 .figure-avatars-bucky {
-    background-image: url("/assets/avatars/bucky.jpg");
+    background-image: url("/assets/images/avatars/bucky.jpg");
 }
 
 .figure-avatars-jayden {
-    background-image: url("/assets/avatars/jayden.jpg");
+    background-image: url("/assets/images/avatars/jayden.jpg");
 }
 
 .figure-avatars-bart {
-    background-image: url("/assets/avatars/bart.jpg");
+    background-image: url("/assets/images/avatars/bart.jpg");
 }
 
 .figure-avatars-chris {
-    background-image: url("/assets/avatars/chris.jpg");
+    background-image: url("/assets/images/avatars/chris.jpg");
 }
 
 .figure-avatars-derek {
-    background-image: url("/assets/avatars/derek.jpg");
+    background-image: url("/assets/images/avatars/derek.jpg");
 }
 
 .figure-avatars-nate {
-    background-image: url("/assets/avatars/nate.jpg");
+    background-image: url("/assets/images/avatars/nate.jpg");
 }
 
 .figure-avatars-trent {
-    background-image: url("/assets/avatars/trent.jpg");
+    background-image: url("/assets/images/avatars/trent.jpg");
 }
 
 .figure-avatars-zach {
-    background-image: url("/assets/avatars/zach.jpg");
+    background-image: url("/assets/images/avatars/zach.jpg");
 }
 
 .h {
