--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -527,91 +527,6 @@ html[dir="rtl"] .select2-container-multi .select2-choices .select2-search-choice
     cursor: default;
 }
 
-.select2-container-multi .select2-choices .select2-search-choice-focus {
-    background: #d4d4d4;
-}
-
-.select2-search-choice-close {
-    display: block;
-    width: 12px;
-    height: 13px;
-    position: absolute;
-    right: 3px;
-    top: 4px;
-    font-size: 1px;
-    outline: none;
-    background: url(/assets/select2.png) right top no-repeat;
-}
-
-html[dir="rtl"] .select2-search-choice-close {
-    right: auto;
-    left: 3px;
-}
-
-.select2-container-multi .select2-search-choice-close {
-    left: 3px;
-}
-
-.select2-container-multi .select2-choices .select2-search-choice .select2-search-choice-close:hover {
-    background-position: right -11px;
-}
-
-.select2-container-multi .select2-choices .select2-search-choice-focus .select2-search-choice-close {
-    background-position: right -11px;
-}
-
-/* disabled styles */
-.select2-container-multi.select2-container-disabled .select2-choices {
-    background-color: #f4f4f4;
-    background-image: none;
-    border: 1px solid #ddd;
-    cursor: default;
-}
-
-.select2-container-multi.select2-container-disabled .select2-choices .select2-search-choice {
-    padding: 3px 5px 3px 5px;
-    border: 1px solid #ddd;
-    background-image: none;
-    background-color: #f4f4f4;
-}
-
-.select2-container-multi.select2-container-disabled .select2-choices .select2-search-choice .select2-search-choice-close {
-    display: none;
-    background: none;
-}
-
-/* end multiselect */
-.select2-result-selectable .select2-match,
-.select2-result-unselectable .select2-match {
-    text-decoration: underline;
-}
-
-.select2-offscreen, .select2-offscreen:focus {
-    clip: rect(0 0 0 0) !important;
-    width: 1px !important;
-    height: 1px !important;
-    border: 0 !important;
-    margin: 0 !important;
-    padding: 0 !important;
-    overflow: hidden !important;
-    position: absolute !important;
-    outline: 0 !important;
-    left: 0px !important;
-    top: 0px !important;
-}
-
-.select2-display-none {
-    display: none;
-}
-
-.select2-measure-scrollbar {
-    position: absolute;
-    top: -10000px;
-    left: -10000px;
-    width: 100px;
-    height: 100px;
-    overflow: scroll;
-}
 
 /* Retina-ize icons */
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 2dppx) {
@@ -4147,7 +4062,23 @@ a:hover {
 .box-pricing {
     border: 2px solid #cbcfd6;
     border-radius: 2px;
-    height: 320px;
+    padding-bottom: 3em;
+}
+
+.box-pricing .per-month {
+  display: none;
+}
+
+.box-pricing .per-year {
+  display: block;
+}
+
+.box-pricing.show-monthly .per-month {
+  display: block;
+}
+
+.box-pricing.show-monthly .per-year {
+  display: none;
 }
 
 .box-pricing .box-header {
@@ -4168,8 +4099,14 @@ a:hover {
     font-size: 11px;
     line-height: 1em;
     font-weight: 400;
-    color: rgba(34, 36, 38, 0.5);
     margin-top: 6px;
+    color: #9559ce;
+}
+
+.box-pricing .toggle {
+  font-size: 12px;
+  line-height: 1.5em;
+  padding-top: 4px;
 }
 
 .box-pricing .box-body {
@@ -4220,13 +4157,6 @@ a:hover {
     columns: 2 1em;
 }
 
-.box-pricing-pro {
-    border-color: #9559ce;
-}
-
-.box-pricing-pro .box-header {
-    color: #9559ce;
-}
 
 .box-pricing-signed-up {
     height: auto;
