fixing quiz tile centering problem

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -13241,7 +13241,7 @@ html, body {
     background: #fff;
 }
 
-.dumb-center-transform, .results-details .event-card {
+.results-details .event-card {
     width: 100%;
 }
 
