--- a/src/modules/includes/google-tag-manager.html
+++ b/src/modules/includes/google-tag-manager.html
@@ -5,5 +5,5 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-W2M6ZD');</script>
+})(window,document,'script','dataLayer','GTM-M8HD4R');</script>
 <!-- End Google Tag Manager -->
