--- a/wp-content/themes/qzzr/style.css
+++ b/wp-content/themes/qzzr/style.css
@@ -9184,7 +9184,7 @@ select:focus {
   right: 0;
   bottom: 0;
   left: 0;
-  background-image: linear-gradient(#002f4b,#dc4225);
+  background-image: linear-gradient(#52C291,#9559CE);
   opacity: .6; 
   display: block;
   z-index: 0;
