--- a/src/wp-content/themes/qzzr/style.css
+++ b/src/wp-content/themes/qzzr/style.css
@@ -5918,9 +5918,9 @@ select:focus {
 
 @media (max-width: 500px) {
     .logo {
-        width: 50px;
-        height: 19px;
-        background-size: 50px 19px
+        width: 38px;
+        height: 12px;
+        background-size: 38px 12px;
     }
 }
 
