--- a/src/wp-content/themes/qzzr/style.css
+++ b/src/wp-content/themes/qzzr/style.css
@@ -4339,6 +4339,16 @@ a:hover {
     width: 100%
 }
 
+@media screen and (max-width: 400px) {
+    .button-with-label {
+        width: 36px;
+        padding: 2px 0 0 0;
+    }
+    .button-with-label .button-label {
+        display: none;
+    }
+}
+
 .button-primary,
 .contact-form-container input[type="submit"] {
     background: #52c291;
