finished html and css. Moving to responsive.

--- a/wp-content/themes/qzzr/style.css
+++ b/wp-content/themes/qzzr/style.css
@@ -9340,6 +9340,15 @@ select:focus {
     margin-right: 18px;
     margin-left: -18px;
 }
+
+.lh1 {
+    line-height: 1;
+}
+
+.mb24 {
+    margin-bottom: 24px;
+}
+
 .brand-card-margin {
     margin: 0 36px 0 0;
 }
@@ -9365,6 +9374,7 @@ select:focus {
     font-size: 16px;
     line-height: 2;
     margin-top: 9px;
+    opacity: .8;
 }
    
 .brand-card-description {
@@ -9372,23 +9382,13 @@ select:focus {
     display: block;
     font-size: 14px;
 } 
-
-.brand-card-link {
-    color: #fff;
-}
-
-.brand-card-link:hover {
-    cursor: pointer;
-    color: purple;
-}
-
       
 .brand-card-dotted {
-    border: dashed 2px rgba(255,255,255,.5);
+    border: dashed 2px rgba(107, 120, 133, 0.5);
 }
 
 .brand-card-border {
-    border: solid 2px rgba(255,255,255,.5);
+    border: solid 2px rgba(107, 120, 133, 0.5);
 }
 
 .brand-card-white {
@@ -9403,6 +9403,22 @@ select:focus {
     background-color: #192129;
 } 
 
-.brand-card-midGray {
-    background-color: rgba(107, 120, 133, 0.5);
-}  
+.brand-card-mint {
+    background-color: #52C291;
+} 
+
+.brand-card-lightGray {
+    background-color: #EEEFF8;
+} 
+
+.brand-card-charcoal {
+    background-color: #343F4A;
+} 
+
+.brand-card-darkGray {
+    background-color: #3F4B58;
+} 
+
+.brand-card-blueGray {
+    background-color: #6B7885;
+} 
