--- a/src/modules/pages/index.jade
+++ b/src/modules/pages/index.jade
@@ -376,7 +376,7 @@ block main
             strong over 16,000 leads and $75,000 in revenue.
             | "
           footer
-            p.name.b Chris Pirotta
+            p.name.b Chris Pirotta!!
             span Director of Ecommerce,
             span Slideshow Collectibles
     .col-4.col-wxl-8.col-wxl-offset-2.col-wl-offset-0.col-wl-12
